--- a/Stata/StataMod/StataMod.rmd
+++ b/Stata/StataMod/StataMod.rmd
@@ -10,22 +10,28 @@ opts_chunk$set(collectcode = TRUE, echo = FALSE, cleanlog = FALSE, engine="stata
 
 **Topics**
 
-* Stata modeling
-    + Multiple regression
-    + Testing model assumptions
-    + Interactions
+* Models with continuous outcomes 
+    + Fit OLS regression in Stata 
+    + Test model assumptions 
+    + Add interactions 
+    + Add categorical predictors 
     + Exporting regression tables
-* Obtaining margins of responses 
-    + margins of logistic regression 
-    + margins of OLS regression 
-* Different types of adjusted predictions and marginal effects 
-    + APM: adjusted predictions at the mean 
-    + MEM: marginal effects at the mean
-    + AAP: average adjusted predictions
-    + AME: average marginal effects
-    + APR: adjusted predictions at representative values 
-    + MER: marginal effects at representative values
-    
+
+* Models with binary outcomes 
+    + Fit logistic regression in Stata 
+    + Obtain log odds/odds ratio 
+
+* Margins of OLS regression  
+    + Margins by itself 
+    + Margins for categorical predictor 
+    + Margins for continuous predictor 
+    + Marginsplot 
+
+* Margins of logistic regression     
+    + APM and MEM
+    + AAP and AME
+    + APR and MER
+  
   
 ## Setup
 
@@ -49,25 +55,44 @@ This is an intermediate-level Stata modeling workshop
 ## Goals
 
 <div class="alert alert-success">
-**We will learn about the Stata language by analyzing data from several datasets.** In particular, our goals are:
+**We will learn about the Stata language by analyzing data from two datasets.** In particular, our goals are:
 
 1. Fit models in Stata 
 2. Test modeling assumptions
-3. Learn how to obtain marginal effects 
-4. Obtain margins with interaction terms 
-5. Distinguish and choose from different types of margins  
+3. Add categorical predictors and interactions 
+4. Distinguish and choose from different types of margins  
+5. Obtain margins with interaction terms 
 </div>
 
 
-## Multiple regression
+## Modeling workflow
+
+Before we delve into the details of how to fit models in Stata, it's worth taking a step
+back and thinking more broadly about the components of the modeling process. These
+can roughly be divided into 3 stages:
+
+1. Pre-estimation
+2. Estimation
+3. Post-estimaton
+
+At each stage, the goal is to complete a different task (e.g., to clean data, fit a model, test a hypothesis),
+but the process is sequential --- we move through the stages in order (though often many times in one project!)
+
+![](C:/Users/Yihan/.git/dss-workshops/Stata/StataMod/images/Stata_model_pipeline.png)
+
+Throughout this workshop we will go through these stages several times as we fit different types of model.
+
+
+## Models with continuous outcomes 
 
 <div class="alert alert-info">
-**GOAL: To learn the basics about modeling in Stata, test model assumptions, how to add interaction terms and categorical predictors.** In particular:
+**GOAL: To learn modeling with continuous outcomes in Stata.** In particular:
 
-1. Fit multiple regression in Stata 
-2. Test model assumptions 
-2. Add interactions 
-3. Add categorical predictors 
+1. Set working directory and load data 
+2. Examine descriptive statistics
+3. Look at relationship graphically and test correlation(s)
+4. Run an initial model and retest the model 
+5. Add interaction and categorical predictors 
 </div>
 
 
@@ -80,7 +105,7 @@ This is an intermediate-level Stata modeling workshop
 * Does the amount of money spent on education (``expense``) affect the mean SAT score (``csat``) in a state, controlling for family income(``income``) and percentage of students taking SATs (``percent``) in a state?
 
 
-### Opening Files
+### Set working directory 
 
 * Look at bottom left hand corner of Stata screen
     + This is the directory Stata is currently reading from
@@ -101,7 +126,7 @@ This is an intermediate-level Stata modeling workshop
 ```
 
 
-* Load the data
+### Load the data
 
 ```{stata}
   // use the states data set
@@ -109,84 +134,66 @@ This is an intermediate-level Stata modeling workshop
 ```
 
 
-### Steps for running OLS regression:
-
-1.  Examine descriptive statistics
-2.  Look at relationship graphically and test correlation(s)
-3.  Run an initial model 
-4.  Test regression assumptions 
-5.  Finalize model and interpret results 
-
-
-#### Preliminaries
-
-* First, let's look at some descriptives 
+### Examine descriptive statistics 
 
 ```{stata}
-  // descriptive statistics and correlations
+  // descriptive statistics 
   sum expense income percent csat
+```
+
+
+### Test correlations 
+
+```{stata}
+  // test correlations 
+  scatter expense income
+  scatter expense percent 
   
   pwcorr csat expense income percent
   pwcorr csat expense income percent, sig
 ```
 
 
-#### Fit the model 
+### Fit the model 
+
+To fit a model in Stata, we first have to convert our theoretical model into
+a `formula` --- a symbolic representation of the model in Stata syntax:
+
+```{r, eval=FALSE}
+# formula for model specification
+regress outcome pred1 pred2 pred3
+```
+
+For example, the following model predicts SAT scores based on the amount of money spent on education (``expense``), family income(``income``), and percentage of students taking SATs (``percent``) in a state. 
+
+<div class="alert alert-secondary">
+$$
+csat_i = \beta_01 + \beta_1expense_i + \beta_2income_i +\beta_3percent_i + \epsilon_i
+$$
+</div>
 
 * regress csat on expense, income, and percent 
 
 ```{stata}
-  regress csat expense 
   regress csat expense income percent 
 ```
 
 
 #### OLS assumptions
 
-* Assumption 1: Specification is appropriate (i.e., no relevant omitted variables)
-* Assumption 2: Homoscedasticity (The variance around the regression model is the same for all values of the predictor variable)
-* Assumption 3: Multicollinearity 
-* Assumption 4: There needs to be linear relationships between variables 
-* Assumption 5: Normal Distribution of residuals (errors) 
+OLS regression relies on several assumptions, including:
+
+1. The model includes all relevant variables (i.e., no omitted variable bias).
+2. The model is linear in the parameters (i.e., the coefficients and error term).
+3. The error term has an expected value of zero.
+4. All right-hand-side variables are uncorrelated with the error term.
+5. No right-hand-side variables are a perfect linear function of other RHS variables.
+6. Observations of the error term are uncorrelated with each other.
+7. The error term has constant variance (i.e., homoscedasticity).
+8. (Optional - only needed for inference). The error term is normally distributed.
 
 
-##### Specification
-
-* The model specification should be informed by theory - i.e., our substantive knowledge of the subject matter. 
-* It's important to include all relevant predictors in the model, otherwise our estimates will be biased.
-
-
-##### Homoscedasticity
-
-* rvfplot(read residual-versus-fitted plot) graphs the residuals against the fitted values 
-* In a well-fitted model, there should be no pattern to the residuals plotted against the fitted
-  values
-
-```{stata}
-  rvfplot
-```
-
-
-##### Multicollinearity
-
-* When the degree of multicollinearity increases, the regression coefficients can be unstable and the standrard error for the correlation get inflated 
-* The rule of thumb is that a variable with vif (variance infltion factor) value greater than 10 should be re-examined
-
-```{stata}
-vif
-```
-
-
-##### Linearity 
-
-* When we perform a regression analysis, we assume that the relationship between the response variable and the predictors is linear. 
-
-```{stata}
-  twoway (scatter csat expense)(lfit csat expense)(lowess csat expense)
-```
-
-
-##### Normality
+### Test model assumptions 
 
 * A simple histogram of the residuals can be informative
 
@@ -194,40 +201,18 @@ vif
   // graph the residual values of csat
   predict resid, residual
   histogram resid, normal 
+  
+  // examine homoscedasticity
+  rvfplot, yline(0)
 ```
 
 * Type -help regress postestimation- for more information about these statistical tools. 
 
-
-
-### Exercise 0
-
-**Multiple Regression**
-
-Open the datafile, ``gss.dta``
-
-1.  Select a few variables to use in a multiple regression of your own. Before running the regression, examine descriptive of the variables and generate a few scatterplots.
-
-```{stata}
-##
-```
-
-2.  Run your regression.
-
-```{stata}
-##
-```
-
-3.  Examine the plausibility of the assumptions of normality and homoscedasticity.
-
-```{stata}
-##
-```
+* Refit the model if necessary 
 
 
 ### Interactions
 
-* open the ``states.dta`` dataset again 
 * What if we wanted to test an interaction between percent & high?
 * Option 1: generate product terms by hand
 
@@ -237,8 +222,6 @@ Open the datafile, ``gss.dta``
   regress csat expense income percent high percenthigh
 ```
 
-
-* What if we wanted to test an interaction between percent & high?
 * Option 2: Let Stata do your dirty work
 
 ```{stata}
@@ -248,7 +231,7 @@ Open the datafile, ``gss.dta``
 ```
 
 
-### Categorical Predictors
+### Categorical predictors
 
 * For categorical variables, we first need to dummy code
 * Use region as example
@@ -262,9 +245,6 @@ Open the datafile, ``gss.dta``
   regress csat region1 region2 region3
 ```
 
-
-* For categorical variables, we first need to dummy code
-* Use region as example
     + Option 2: Let Stata do it for you
 
 ```{stata}
@@ -274,23 +254,69 @@ Open the datafile, ``gss.dta``
 ```
 
 
-### Exercise 1
+### Exercise 0
 
-**Regression, Categorical Predictors, & Interactions**
+**Regression with continuous outcomes**
 
-Open the datafile ``gss.dta``
+Open the datafile, ``gss.dta``
 
-1.  Add on to the regression equation that you created in exercise 0 by generating an interaction term and testing the interaction.
+Fit a OLS regression model to predict general happiness (``happy``) based on respondent's sex (``sex``), marital status (``marital``), highest year of school completed (``educ``), and respondent's income for last year (``rincome``). 
 
-```{stata}
-##
-```
-
-2.  Try adding a categorical variable to your regression (remember, it will need to be dummy coded). You could use any existing or generate a new categorical variable from one of the continuous variables in the dataset.
+1.  Before running the regression, examine descriptive of the variables and generate a few scatterplots.
 
 ```{stata}
 ##
+
 ```
+
+2.  Run your regression.
+
+```{stata}
+##
+
+```
+
+3.  Examine the plausibility of the assumptions of normality and homoscedasticity. 
+
+```{stata}
+##
+
+```
+
+4.  Add on to the regression equation by generating an interaction term between ``sex`` and ``educ`` and testing the interaction.
+
+```{stata}
+##
+
+```
+
+
+<details>
+  <summary><span style="color:red"><b>Click for Exercise 0 Solution</b></span></summary>
+  <div class="alert alert-danger">
+```{stata}
+// 1.  Before running the regression, examine descriptive of the variables and generate a few scatterplots.
+
+sum happy educ rincome 
+tab sex 
+tab marital 
+
+// 2.  Run your regression.
+
+regress happy i.sex educ i.marital rincome
+
+// 3.  Examine the plausibility of the assumptions of normality and homoscedasticity. 
+
+hist happy, normal 
+rvfplot,yline(0)
+
+// 4.  Add on to the regression equation by generating an interaction term between ``sex`` and ``educ`` and testing the interaction.
+
+regress happy i.sex##c.educ i.marital rincome
+
+```
+</div>
+</details>
 
 
 ## Exporting & saving results
@@ -323,6 +349,7 @@ Open the datafile ``gss.dta``
   // fit two regression models and store the results
   regress csat expense income percent high
   estimates store Model1
+  
   regress csat expense income percent high i.region
   estimates store Model2
 ```
@@ -341,6 +368,8 @@ Open the datafile ``gss.dta``
 ```{stata}
   // Compare Model1 and Model2 coefficients
   estimates table Model1 Model2
+  // Compare Model1 and Model2 fit 
+  lrtest Model1 Model2 
 ```
 
 
@@ -354,227 +383,355 @@ Open the datafile ``gss.dta``
 ```
 
 
-
-## Obtaining margins of responses 
+## Models with binary outcomes 
 
 <div class="alert alert-info">
-**GOAL: To learn the basics about margins in Stata** In particular:
+**GOAL: To learn modeling with binary outcomes in Stata.** In particular:
 
-1. An example of margins using OLS regression
-2. An example of margins using logistic regression 
+1. Set working directory and load data 
+2. Run summary statistics for outcome variable and predictors
+3. Run the model to obtain log odds/odds ratio 
 </div>
 
 
-### Margins of OLS regression 
+### Today's Dataset
 
-* We will be continuing with our previous example: predict ``csat`` using ``expense`` and another factor variable ``region``, controlling for ``income`` and ``percent``, using the ``states.dta`` data set. 
+* Using the ``states.dta``, we're going to be predicting binary SAT score (>=1000; <1000) using people per square mile, percent HS graduates taking SAT, and per pupil expenditures for primary and secondary school.
 
+* Does people per square mile (``density``), percent HS graduates taking SAT (``percent``), and per pupil expenditures for primary and secondary school (``expense``) affect SAT performance in a region (``csat``)? 
 
-#### Load the data
+### Load the dataset
 
 ```{stata}
   // use the states data set
   use dataSets/states.dta
 ```
 
+### Recode the outcome variable 
 
-#### Fit the model 
-
-* regress csat on expense, income, percent, and region 
+* Recode the composite SAT score (``csat``) into two categories - whether a region's mean SAT score is higher than or eaqul to, or lower than 1000. 
 
 ```{stata}
-  regress csat expense income percent i.region 
+gen sat_binary = .
+replace sat_binary = 0 if csat < 1000
+replace sat_binary = 1 if csat >= 1000
+
 ```
 
-
-#### Obtain average values of y 
-
-```{stata}
-  margins region
-```
-
-
-#### Obtain average values at the mean of the covariates 
+### Run summary statistics 
 
 ```{stata}
-  margins region, atmeans
-```
-
-
-#### Margins with continuous variables 
-
-* margins requires more guidance with continuous covariates 
-
-```{stata}
-//doing this will produce an error 
-margins expense
-//using the at() option 
-margins, at (expense=5000)
-```
-
-* If you want to obtain margins in increments 
-
-```{stata}
-margins, at(expense=(2000(1000)8000))
+tab sat_binary
+sum density percent expense 
 
 ```
 
 
+### Run the logit model 
 
-### Margins of logistic regression 
+Let's predict the probability of having mean SAT score greater than or equal to 1000 based on `density`, `percent`, and `expense`.
 
-* Using the ``gss.dta`` data set, we're going to be predicting **general happiness** using **highest education degree**, controlling for **sex**, **age**, and **race**
-* Does one's highest education degree (``degree``) affect their general happiness (``happy1``), controlling for sex (``sex``), age (``age``), and one's marital status (``marital``)?
+Here's the model:
 
+<div class="alert alert-secondary">
+$$
+logit(sat_i) = \beta_01 + \beta_1densityp_i + \beta_2percent_i + \beta_3expense_i + \epsilon_i 
+$$
+</div>
 
-### Dataset
+where $logit(\cdot)$ is the link function, which is equivalent to the log odds of `sat`:
 
-* We will load the data 
+<div class="alert alert-secondary">
+$$
+logit(sat_i) = ln \frac{p(sat_i = 1)}{p(sat_i = 0)}
+$$
+</div>
+
 
 ```{stata}
-  // use the gss data set
-  use dataSets/gss.dta
+ // logit regression outcome on a log odds scale 
+logit sat_binary density percent expense
+ // logit regression outcome on a odds ratio scale 
+logit sat_binary density percent expense, or 
 ```
 
 
-### Steps in fitting a logistic regression model and examine the predicted probabilities 
+### Exercise 1
 
-1. Run summary statistics for outcome variable and independent variables 
-2. Run the model to obtain log odds/odds ratio 
-3. Examine overall effect of a variable 
-4. Get predicted probabilities using margins  
-5. Examine model fit and compare models 
+**Regression with binary outcomes**
 
+Use the data file, ``gss.dta``. Examine how age of a respondent (``age``), highest year of school completed (``degree``), hours per day watching TV (``tvhours``), and total family income for last year (``income``) relate to whether someone uses internet (``usenet``). 
 
-#### Run summary statistics 
-
-* Run summary statistics for continuous variables 
+1.  Load the dataset 
 
 ```{stata}
-summarize age degree 
+##
 
 ```
 
-* Run summary statistics for categorical variables 
+2.  Run summary statistics, delete the sample who did not provide an answer 
 
 ```{stata}
-tab sex marital 
+##
 
 ```
 
-
-#### Run the model 
-
-* run logit regression 
+3.  Fit the logit model and save it as Model 1 
 
 ```{stata}
-logit happy1 i.sex age i.marital i.degree
-logit happy1 i.sex age i.marital i.degree, or 
-```
-
-
-#### Test overall effect of a predictor 
-
-* We can test for an overall effect of degree using the test command. Below we see that the overall effect of degree is statistically significant.
-
-```{stata}
-test 1.degree 2.degree 3.degree 4.degree 
+##
 
 ```
 
-
-#### Get predicted probabilities using the margins command 
-
-* Fit all other covariates at the mean 
+4.  Add another predictor (``hrs1``) in the model and save the new model as Model 2 and compare between Model 1 and Model 2 
 
 ```{stata}
-margins degree, atmeans 
+##
 
 ```
 
-* Below we generate the predicted probabilities for age from 20 to 80 in increments of 10. 
-
-* Because we have not specified either atmeans or used at(.) to specify values at with the other predictor variables are held, the values in the table are average predicted probabilities calculated using the sample values of the other predictor variables.
+5.  Save the better fitted model output to a word document 
 
 ```{stata}
-margins , at(age=(20(10)80))  vsquish
+##
+
 ```
 
+<details>
+  <summary><span style="color:red"><b>Click for Exercise 1 Solution</b></span></summary>
+  <div class="alert alert-danger">
+```{stata}
+// 1.  Load the dataset 
 
-#### Test model fit 
+use gss.dta, clear 
 
-* We may also wish to see measures of how well our model fits. This can be particularly useful when comparing competing models. The user-written command fitstat produces a variety of fit statistics. You can find more information on fitstat by typing -search fitstat-.  
+// 2.  Run summary statistics, delete the sample who did not provide an answer
+
+tab usenet 
+drop if usenet == 9
+tab degree 
+sum age tvhours income 
+
+// 3.  Fit the logit model and save it as Model 1  
+
+logit usenet age i.degree tvhours income 
+est store Model1
+
+// 4.  Add another predictor (``hrs1``) in the model and save the new model as Model 2 and compare between Model 1 and Model 2 
+
+logit usenet age i.degree tvhours income hrs1
+est store Model2 
+
+lrtest Model1 Model2
+
+// 5.  Save the better fitted model output to a word document 
+
+logit usenet age i.degree tvhours income hrs1
+outreg2 using Mymodel.doc
+
+```
+</div>
+</details>
+
+
+
+**Why use margins?** 
+  
+1. Marginal effect tells us how a dependent variable changes when a specific independent variable 
+   changes. When estimating marginal effect, other covariates are assumed to be held constant. 
+2. Marginal effects can provide us more meaningful information regarding how changes of a predictor 
+   relate to the outcome. It is often calculated when analyzing regression analysis results.
+3. Stata provides us a handy tool ``margins`` command to estimate marginal effect. 
+4. The margins command can only be used after you've run a regression, and acts on the results of the       most recent regression command. 
+5. There are different types of margins. We will explain three most common marginal effect below.  
+
+
+## Margins with OLS regression 
+
+<div class="alert alert-info">
+  **GOAL: To learn margins of continuous outcomes in Stata.** In particular:
+  
+1. Margins by itself 
+2. Margins for categorical predictor 
+3. Margins for continuous predictor 
+4. Marginsplot 
+</div>
+  
+  
+### Our dataset 
+  
+* The case study examples use the Second National Health and Nutrition Examination Survey (NHANES II) 
+  which was conducted in the mid to late 1970s. 
+* We will examine systolic blood pressure (``bpsystol``) based on respondent's age (``age``), whether      having diabetes (``diabetes``), and region (``region``).
+* The example in this section is completely made up for the purpose of demonstrating margins command. The   model is not based on any medical or theoretical knowledge whatsoever. 
+* Stata provides online access to an adultsonly extract from these data.
+* More on the study can be found at https://wwwn.cdc.gov/nchs/nhanes/nhanes2/
+  
+### Load the data 
+    
+```{stata}
+use dataSets/nhanesII.dta
+
+``` 
+
+### Fit the model 
 
 ```{stata}
-fitstat
+regress bpsystol age i.diabetes i.region
+
+```
+
+### Margins by itself 
+
+* If you just type ```margins``` by itself, Stata will calculate the preducted value of ``bpsystol`` for each observation, then report the mean value of those predictions.  
+
+```{stata}
+margins
+
+```
+
+### Margins for categorical predictor 
+
+* If margins is followed by a categorical variable, for example, ``region``, Stata first identifies all the levels of the categorical variable. Then, it calculates what the mean predicted value of ``bpsystol`` would be if all observations had that value for ``region``. All other variables are left unchanged. 
+
+```{stata}
+ // margins for dummy variable 
+margins, diabetes
+ // margins for categorical variable 
+margins, region
+
+```
+
+### Margins for continuous predictor 
+
+* For continuous variables, ``margins`` cannot look at all possible values, but we can specify which values we want to examine with the ``at`` option: 
+
+```{stata}
+margins, at(age = (50 80))
+```
+
+* This calculates the mean predicted value of ``bpsystol`` with age set to 50, and then again with age set to 80. We can also add more values by listing the numbers you want in a *numlist*:
+
+```{stata}
+margins, at(age=(50(5)80))
+
+```
+
+### Marginsplot 
+
+* This calculates the mean predicted value of ```bpsystol`` with age set to 50, 55, 60, 65, 70, 75, and 80. We can further use ``marginsplot`` to graph the results. 
+
+```{stata}
+marginsplot
 
 ```
 
 
 ### Exercise 2
 
-**Margins**
-
+**Margins with OLS regression**
+  
 Open the datafile ``gss.dta``
 
-1. Based on the previous model you specified in Exercise 1, obtain predicted margins of a categorical predictor, fixing all other covariates at the mean 
+1. Based on the previous model you specified in Exercise 1, obtain predicted general happiness (``happy``)
 
 ```{stata}
 ##
+
 ```
 
-2. Obtain predicted margins of a continuous predictor at a certain value 
+2. Obtain predicted margins of ``sex`` and ``marital``. 
 
 ```{stata}
 ##
+
 ```
 
-3. Obtain fit statistics for your model 
+3. Obtain predicted margins of ``rincome`` from 10000 to 30000, with an interval of 5000. 
 
 ```{stata}
 ##
+
+```
+
+4. Create a marginsplot and interpret the results. 
+
+```{stata}
+## 
+
 ```
 
 
-## Different types of adjusted predictions and marginal effects 
+<details>
+  <summary><span style="color:red"><b>Click for Exercise 2 Solution</b></span></summary>
+  <div class="alert alert-danger">
+```{stata}
+// 1. Based on the previous model you specified in Exercise 1, obtain predicted general happiness (``happy``)
 
-<div class="alert alert-info">
-**GOAL: To learn the three most common types of adjusted predictions in Stata, and how to calculate the corresponding marginal effects, using a case example** In particular:
+regress happy i.sex educ i.marital rincome
+margins 
 
-1. **APMs** (adjusted predictions at the mean) and **MEM** (marginal effects at the mean) 
-2. **AAPs** (average adjusted predictions) and **AME** (average marginal effects)
-3. **APRs** (adjusted predictions at representative values) and **MER** (marginal effects at representative values).
+// 2. Obtain predicted margins of ``sex`` and ``marital``. 
+
+margins, sex 
+margins, marital
+
+// 3. Obtain predicted margins of ``rincome`` from 10000 to 30000, with an interval of 5000. 
+
+margins, at(rincome=(10000(5000)30000))
+
+// 4. Create a marginsplot and interpret the results. 
+
+marginsplot 
+
+```
 </div>
+  </details>
 
 
+## Margins with logistic regression 
+  
+<div class="alert alert-info">
+  **GOAL: To learn margins of binary outcomes in Stata.** In particular:
+  
+  1. Adjusted predictions at the means (APM) and Marginal effects at the mean (MEM)
+  2. Marginal effects at the means (MEM) and Average marginal effects (AME)
+  3. Average marginal effects (AME) and Marginal effects at representative values (MER)
+</div>
+  
+  
 ### Opening the data set 
+  
+* We will be using the same dataset as the previous example: the Second National Health and Nutrition      Examination Survey (NHANES II) 
+* The examples were drawn from online materials from Prof. Richard Williams from 
+  https://www3.nd.edu/~rwilliam/stats/Margins01.pdf
+* We will be predicting whether someone has diabetes (``diabetes``) using race (``black``), sex         (``female``), and age (``age``). 
+  
+### Load the data 
+    
+```{stata}
+use dataSets/nhanesII.dta
 
-* The case study examples use the Second National Health and Nutrition Examination Survey (NHANES II) which was conducted in the mid to late 1970s. 
-* The examples were drawn from online materials from Prof. Richard Williams from https://www3.nd.edu/~rwilliam/stats/Margins01.pdf
-* Stata provides online access to an adultsonly extract from these data.
-* More on the study can be found at https://wwwn.cdc.gov/nchs/nhanes/nhanes2/
+```  
 
-
-#### Fit the basic model 
-
+### Fit the basic model 
+  
 ```{stata}
 logit diabetes black female age, nolog 
 
 ```
 
-
-#### Marginal effects at the mean(MEM)
+### Marginal effects at the mean (MEM)
 
 ```{stata}
 //obtain APM for Black and White
-margins black feamle, atmeans
+margins black female, atmeans
 
 //calculate MEM, meaning having the mean value for the other independent variables in the model 
 margins, dydx(black female) atmeans
 ```
 
-
-#### Average marginal effects (AME)
+### Average marginal effects (AME)
 
 ```{stata}
 //obtain AAPs 
@@ -585,8 +742,7 @@ margins, dydx(black female)
 
 ```
 
-
-#### Marginal effects at representative values (MER)
+### Marginal effects at representative values (MER)
 
 ```{stata}
 //choose range of values for one or more variable
@@ -596,8 +752,7 @@ margins black, at(age=(20 30 40 50 60 70)) vsquish
 margins, dydx(black female) at(age=(20 30 40 50 60 70)) vsquish 
 ```
 
-
-#### Graphing results 
+### Graphing results 
 
 ```{stata}
 marginsplot
@@ -606,30 +761,58 @@ marginsplot
 
 ### Exercise 3
 
-**Choose the appropriate margins**
+**Margins with logistic regression**
+  
+  Open the datafile ``gss.dta``
 
-Open the data set ``gss.dta``
-
-1. Based on the previous model you specified in Exercise 3, choose a variable you are interested, obtain marginal effect at the mean (MEM)
-
-```{stata}
-##
-```
-
-2. Obtain average marginal effect (AME)
+1. Based on the previous model you specified in Exercise 1, obtain APM for degree, and calculate MEM 
 
 ```{stata}
 ##
+
 ```
 
-3. Obtain marginal effects at representative values (MER) 
+2. Obtain predicted margins of ``tvhours`` from 0 to 10 hours, on a 1 hour interval. Examine how the marginal effect differs across the range. 
 
 ```{stata}
 ##
+
 ```
 
+3. Create graphics for your model 
+
+```{stata}
+##
+
+```
+
+<details>
+  <summary><span style="color:red"><b>Click for Exercise 3 Solution</b></span></summary>
+  <div class="alert alert-danger">
+```{stata}
+ // 1. Based on the previous model you specified in Exercise 1, obtain APM for degree, and calculate MEM 
+
+logit usenet age i.degree tvhours income 
+
+margins degree, atmeans
+margins, dydx(degree) atmeans
+
+  // 2. Obtain predicted margins of ``tvhours`` from 0 to 10 hours, on a 1 hour interval. Examine how the marginal effect differs across the range. 
+
+margins degree, at(tvhours=(0 1 2 3 4 5 6 7 8 9 10) vsquish 
+margins, dydx(degree) at(tvhours=(0 1 2 3 4 5 6 7 8 9 10)) vsquish 
+
+ // 3. Create graphics for your model 
+
+marginsplot
+
+```
+</div>
+  </details>
 
 
+  
+  
 ## Wrap-up
 
 ### Feedback
@@ -639,20 +822,21 @@ These workshops are a work in progress, please provide any feedback to: help@iq.
 ### Resources
 
 * IQSS 
-    + Workshops: <https://dss.iq.harvard.edu/workshop-materials>
-    + Data Science Services: <https://dss.iq.harvard.edu/>
-    + Research Computing Environment: <https://iqss.github.io/dss-rce/>
-
-* HBS
-    + Research Computing Services workshops: <https://training.rcs.hbs.org/workshops>
-    + Other HBS RCS resources: <https://training.rcs.hbs.org/workshop-materials>
-    + RCS consulting email: <mailto:research@hbs.edu>
-
-* Stata
-    + UCLA website: <http://www.ats.ucla.edu/stat/Stata/>
-    + Stata website: <http://www.stata.com/help.cgi?contents>
-    + Email list: <http://www.stata.com/statalist/>
-    
-
-
++ Workshops: <https://dss.iq.harvard.edu/workshop-materials>
+  + Data Science Services: <https://dss.iq.harvard.edu/>
+  + Research Computing Environment: <https://iqss.github.io/dss-rce/>
+  
+  * HBS
++ Research Computing Services workshops: <https://training.rcs.hbs.org/workshops>
+  + Other HBS RCS resources: <https://training.rcs.hbs.org/workshop-materials>
+  + RCS consulting email: <mailto:research@hbs.edu>
+  
+  * Stata
++ UCLA website: <http://www.ats.ucla.edu/stat/Stata/>
+  + Stata website: <http://www.stata.com/help.cgi?contents>
+  + Email list: <http://www.stata.com/statalist/>
+  
+  
+  
+  
 
